Cosmetic fixes
Signed-off-by: Clement Escoffier <clement.escoffier@gmail.com>